prod-croatia-artifactory-main@1a408f826e5/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: artifactory
  namespace: artifactory
spec:
  host: artifactory.apps.prod-nonpci-shared.nrapp.cloud
  to:
    kind: Service
    name: jfrog-platform-artifactory
    weight: 100
  port:
    targetPort: 8082
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
